--- a/css/travel.css
+++ b/css/travel.css
@@ -100,14 +100,13 @@ body {
   }
 
   .card h3{
-    font-family: 'Playfair Display', serif;
     font-weight: lighter;
     margin-left: 10px;
     text-transform: none;
   }
 
   .card button {
-    background-color: var(--accent);
+    background-color: var(--border);
     color: #333;
     padding: 8px 12px;
     border: none;   
@@ -122,7 +121,8 @@ body {
   }
 
   .card button:hover {
-    background-color: #e4cf67;
+    background-color: var(--accent);
+    color: white;
   }
 
   .carousel-button {
@@ -178,14 +178,14 @@ body {
 
   .itinerary-container, .favorites-container {
     flex: 1;
-    background: #ffe784;
+    background: var(--border);
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
   }
 
   .itinerary-container h3, .favorites-container h3 {
-    color: #2e7d32;
+    color: var(--accent);
     margin-bottom: 15px;
     font-size: 1.5rem;
   }
@@ -224,7 +224,7 @@ body {
   }
   
   .add-btn {
-    background-color: #4CAF50;
+    background-color: var(--primary);
     color: white;
     border: none;
     padding: 5px 8px;
@@ -234,6 +234,10 @@ body {
     margin-left: auto;
     white-space: nowrap;
     width: 150px; 
+  }
+
+  .add-btn:hover{
+    background-color: var(--accent);
   }
   
   .activity-item {
@@ -270,7 +274,7 @@ body {
   }
   
   .optimize-btn {
-    background-color: #2e7d32;
+    background-color: var(--primary);
     color: white;
     border: none;
     padding: 8px 15px;
@@ -288,7 +292,7 @@ body {
   
   .favorites-container {
     flex: 1;
-    background: #ffe784;
+    background: var(--border);
     padding: 20px;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.08);
@@ -346,7 +350,7 @@ body {
   
   .favorite-name {
     font-weight: 600;
-    color: #333;
+    color: var(--accent);
     margin-bottom: 4px;
   }
   
@@ -370,7 +374,7 @@ body {
   }
   
   .add-to-itinerary-btn {
-    background-color: #4CAF50;
+    background-color: var(--primary);
     color: white;
     border: none;
     padding: 6px 12px;
@@ -381,7 +385,7 @@ body {
   }
   
   .add-to-itinerary-btn:hover {
-    background-color: #3e8e41;
+    background-color: var(--accent);
   }
   
   .remove-favorite-btn {
@@ -415,7 +419,7 @@ body {
   }
   
   .add-to-itinerary-btn {
-    background-color: #4CAF50;
+    background-color: var(--accent);
     color: white;
     border: none;
     padding: 3px 8px;
@@ -439,7 +443,7 @@ body {
 
   .bottom-bar button {
     padding: 10px 16px;
-    background-color: #4CAF50;
+    background-color: var(--accent);
     color: white;
     border: none;
     border-radius: 10px;
