--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,15 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Eco Travel Planner</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css"> <!--Linking the front page-->
+    <link rel="stylesheet" href="/css/style.css"> <!--Linking the front page-->
 </head>
 
 <body>
 
     <!--Header for each page-->
-    <header class="main-header">
-        <h1 class="app-title">TerraGo</h1>
-      </header>
+    <%- include('partials/header') %>
       
       <!--Main content-->
     <main class="form-container">
@@ -42,15 +40,13 @@
 
             <button type="submit">Register</button>
         </form>
-        <p>Already have an account? <a href="login.html">Login</a></p>
+        <p>Already have an account? <a href="/login">Login</a></p>
     </main>
 
     <!--Footer for copywrite-->
-    <footer>
-        <p>&copy; Group 8 – OCC 3 Web Programming</p>
-    </footer>
+    <%- include('partials/footer') %>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-    <script src="js/register.js"></script>
+    <script src="/js/register.js"></script>
 </body>
 </html>
